# tsfm-thesis

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_zeroshot_pit.ipynb  02_cache_embeddings.ipynb  03_train_heads.ipynb
src/tsfm_cal/: __init__.py  backbone.py  clean.py  config.py  data.py  eval.py  finetune.py  heads.py  io_utils.py  pit.py  plot.py  wrds_data.py
tests/: test_clean.py  test_eval.py  test_heads.py
